System generated commit, for syncing changes with remote after git pull

--- a/application.json
+++ b/application.json
@@ -5,7 +5,7 @@
   "unreadCommentThreads": 0,
   "color": "#FFEBFB",
   "icon": "euros",
-  "slug": "super-duper-palm-tree-2",
+  "slug": "demoimport",
   "evaluationVersion": 2,
   "createdAt": {
     "seconds": 1645775920,
