--- a/application.json
+++ b/application.json
@@ -5,6 +5,7 @@
   "unreadCommentThreads": 0,
   "color": "#FFEBFB",
   "icon": "euros",
+  "slug": "demoimport",
   "evaluationVersion": 2,
   "createdAt": {
     "seconds": 1645775920,
