--- a/application.json
+++ b/application.json
@@ -1,12 +1,12 @@
 {
-  "isPublic": false,
   "viewMode": false,
   "appIsExample": false,
   "unreadCommentThreads": 0,
   "color": "#FFEBFB",
   "icon": "euros",
-  "slug": "demoimport",
   "evaluationVersion": 2,
+  "applicationVersion": 1,
+  "isManualUpdate": false,
   "createdAt": {
     "seconds": 1645775920,
     "nanos": 818000000
